version/0.19/_sources/api/solver/_autosummary/settings/anode_cl_zone.rst.txt
:orphan:

.. _anode_cl_zone:

anode_cl_zone
=============

.. autoclass:: ansys.fluent.core.solver.settings_241.anode_cl_zone.anode_cl_zone
    :show-inheritance:

.. rubric:: Attributes

==============================================   ========================================

Attribute                                                                         Summary

==============================================   ========================================
:ref:`anode_cl_zone_list <anode_cl_zone_list>`       Set anode catalyst layer cell zones.

:ref:`anode_cl_update <anode_cl_update>`               Use Collective Boundary Condition.

:ref:`anode_cl_material <anode_cl_material>`               Anode catalyst layer material.

:ref:`anode_cl_porosity <anode_cl_porosity>`               Anode catalyst layer porosity.

:ref:`anode_cl_kr <anode_cl_kr>`                        Anode catalyst layer permibility.

==============================================   ========================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`anode <anode>`       'anode' child.

====================   ==================

