version/0.21/_sources/api/solver/_autosummary/settings/anode_cl_zone.rst.txt
:orphan:

.. _anode_cl_zone:

anode_cl_zone
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.anode_cl_zone.anode_cl_zone
    :show-inheritance:

.. rubric:: Attributes

====================================================   =========================================================

Attribute                                                                                                Summary

====================================================   =========================================================
:ref:`anode_cl_zone_list <anode_cl_zone_list>`                              Set anode catalyst layer cell zones.

:ref:`anode_cl_update <anode_cl_update>`                                      Use Collective Boundary Condition.

:ref:`anode_cl_material <anode_cl_material>`                                      Anode catalyst layer material.

:ref:`anode_cl_porosity <anode_cl_porosity>`                                      Anode catalyst layer porosity.

:ref:`anode_cl_kr <anode_cl_kr>`                                              Anode catalyst layer permeability.

:ref:`anode_cl_svratio <anode_cl_svratio>`                            Anode catalyst layer surface volume ratio.

:ref:`anode_cl_thickness <anode_cl_thickness>`                                   Anode catalyst layer thickness.

:ref:`anode_cl_conductivity <anode_cl_conductivity>`                          Anode catalyst layer conductivity.

:ref:`anode_cl_cp_function <anode_cl_cp_function>`             Anode catalyst layer capillary pressure function.

:ref:`anode_cl_angle <anode_cl_angle>`                                       Anode catalyst layer contact angle.

:ref:`anode_cl_a <anode_cl_a>`                             Anode catalyst layer Leverett function coefficient a.

:ref:`anode_cl_b <anode_cl_b>`                             Anode catalyst layer Leverett function coefficient b.

:ref:`anode_cl_c <anode_cl_c>`                             Anode catalyst layer Leverett function coefficient c.

====================================================   =========================================================

.. rubric:: Included in:

====================   =================

Parent                           Summary

====================   =================
:ref:`anode <anode>`       Set up anode.

====================   =================

